<resources>
    <string name="app_name">VocalC</string>
    <string name="calculate">Calculate</string>
    <string name="voice_calculator">Voice Over Cost Calculator</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="price_per_minute">Cost Per Minute</string>
    <string name="total_cost_0_00_bdt">Total Cost: 0.00 BDT</string>
    <string name="total_cost_empty">Total Cost: </string>
</resources>